--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -1,22 +1,132 @@
+#spring.application.name=emailService
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.instance.hostname=localhost
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=veeramallaj@gmail.com
+#spring.mail.password=bqwrcollqqdecfow
+#
+#
+#spring.datasource.url=jdbc:mysql:///hrm_prod_data5
+#spring.datasource.username=root
+#spring.datasource.password=devi18@
+##spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
+##spring.datasource.username=revanth 
+##spring.datasource.password=Admin@123
+#
+#
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#hibernate.dialect.storage_engine=innodb
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+## Other properties
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#
+#
+#
+## TLS , port 587
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#server.port=8087
+#
+#
+#
+## SSL, post 465
+##spring.mail.properties.mail.smtp.socketFactory.port = 465
+##spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#
+
+
+#spring.application.name=emailService
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.instance.hostname=localhost
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=veeramallaj@gmail.com
+#spring.mail.password=bqwrcollqqdecfow
+#
+#
+#spring.datasource.url=jdbc:mysql:///hrm_latest
+#spring.datasource.username=root
+#spring.datasource.password=3472
+##spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
+##spring.datasource.username=revanth 
+##spring.datasource.password=Admin@123
+#
+#
+#
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#hibernate.dialect.storage_engine=innodb
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+## Other properties
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#
+#
+
 spring.application.name=emailService
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.hostname=localhost
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.office365.com
+#spring.mail.host=mail.arshaa.com
 spring.mail.port=587
-spring.mail.username=veeramallaj@gmail.com
-spring.mail.password=bqwrcollqqdecfow
+
+spring.mail.username=info@arshaa.com
+#spring.mail.password=jFm5Ewm69mzzKKC
+spring.mail.password=MRsnbk143
+
+spring.mail.transport.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.smtp.starttls.enable=true
+
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.smtp.timeout=15000
+spring.mail.properties.mail.smtp.connectiontimeout=15000
+spring.mail.properties.mail.smtp.socketFactory.fallback = true
+spring.mail.properties.mail.debug=true
 
 
-spring.datasource.url=jdbc:mysql:///hrm_prod_data5
+
+#spring.mail.from.email=<username@gmail.com>
+
+#spring.mail.username=veeramallaj@gmail.com
+#spring.mail.password=bqwrcollqqdecfow
+
+#server.ssl.protocol=TLS
+#server.ssl.enabled-protocols=TLSv2.0
+#server.ssl.enabled=true
+
+
+spring.datasource.url=jdbc:mysql:///hrm_latest
+
 spring.datasource.username=root
-spring.datasource.password=devi18@
+spring.datasource.password=3472
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
-#spring.datasource.password=Admin@123
+#spring.datasource.password=Password99 
 
-
+spring:
+  mail:
+    protocol: smtp
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -24,15 +134,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # Other properties
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
+
+#spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 
 
 # TLS , port 587
-spring.mail.properties.mail.smtp.starttls.enable=true
+
 server.port=8087
 
 
@@ -40,4 +149,17 @@ server.port=8087
 # SSL, post 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+
+
+#
+## TLS , port 587
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#server.port=8087
+#
+#
+#
+## SSL, post 465
+##spring.mail.properties.mail.smtp.socketFactory.port = 465
+##spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#
 
