--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -32,6 +32,7 @@
     "@testing-library/user-event": "12.1.10",
     "ag-grid-community": "^23.2.0",
     "ag-grid-enterprise": "^23.2.0",
+    "antd": "^4.23.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "country-dropdown-with-flags-for-react": "^1.1.4",
