--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Bands/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Bands/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
 
-spring.datasource.url=jdbc:mysql:///hrm_latest
+spring.datasource.url=jdbc:mysql:///november
 spring.datasource.username=root
-spring.datasource.password=3472
+spring.datasource.password=nikhil14399
 #spring.datasource.url=jdbc:mysql://10.10.10.40:3306/hrm_prod 
 #spring.datasource.username=root
 #spring.datasource.password=Admin@123
