--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
-spring.datasource.url=jdbc:mysql:///hrm-09-08-2022
+spring.datasource.url=jdbc:mysql:///november
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=nikhil14399
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod 
 #spring.datasource.username=hrm 
 #spring.datasource.password=hrm@123 
