--- a/HRM_LOCAL/HRM_LOCAL_JAVA/login/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/login/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///november
+spring.datasource.url=jdbc:mysql:///hrm_without_data
 spring.datasource.username=root
 spring.datasource.password=nikhil14399
 
