--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -53,6 +53,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-calendar": "^3.7.0",
+    "react-chrono": "^1.4.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-hot-toast": "^2.2.0",
