--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Recruitment-Tracker/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Recruitment-Tracker/src/main/resources/application.properties
@@ -6,10 +6,10 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///hrm_clone
+spring.datasource.url=jdbc:mysql:///hrm_26_10_2022
 
 spring.datasource.username=root
-spring.datasource.password=Mohan@9989
+spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
 #spring.datasource.password=Password99 
