--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmploymentType/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmploymentType/src/main/resources/application.properties
@@ -6,8 +6,7 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///hrm_26_10_2022
-
+spring.datasource.url=jdbc:mysql:///11-11-2022productiondb-hrm
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod
