--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Recruitment-Tracker/pom.xml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Recruitment-Tracker/pom.xml
@@ -14,7 +14,7 @@
 	<name>Recruitment-Tracker</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -84,6 +84,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>Recruitment-tracker</finalName>
 	</build>
 
 </project>
