--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Leads/pom.xml
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Leads/pom.xml
@@ -67,6 +67,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>leads</finalName>
 	</build>
 
 </project>
