--- a/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
@@ -7,10 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
 
-spring.datasource.url=jdbc:mysql:///hrm_26_10_2022
-
+spring.datasource.url=jdbc:mysql:///server20221122
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Bhavani@21
 
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
