--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Leads/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Leads/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.datasource.hikari.maxLifeTime:600000
 #spring.datasource.url=jdbc:mysql:///11-11-2022productiondb-hrm
 #spring.datasource.username=root
 #spring.datasource.password=root
-spring.datasource.url=jdbc:mysql:///hrm_27_09
+spring.datasource.url=jdbc:mysql:///hrm_prod
 spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.password=Chow$5090
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
