--- a/HRM_LOCAL/HRM_LOCAL_UI/package.json
+++ b/HRM_LOCAL/HRM_LOCAL_UI/package.json
@@ -34,6 +34,7 @@
     "ag-grid-enterprise": "^23.2.0",
     "antd": "^4.23.6",
     "axios": "^0.27.2",
+    "react-html-table-to-excel": "^2.0.0",
     "bootstrap": "^5.1.3",
     "country-dropdown-with-flags-for-react": "^1.1.4",
     "date-fns": "^2.28.0",
