--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Resignation_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Resignation_Service/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.datasource.url=jdbc:mysql:///hrm_27_09
-spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
+spring.datasource.username=hrm
+spring.datasource.password=sqluser@hrm
 server.port=8143
 spring.datasource.hikari.maxLifeTime:600000
 max_connections=1000
