--- a/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.datasource.hikari.maxLifeTime:600000
 
 
 
-spring.datasource.url=jdbc:mysql:///hrm_27_09_
-spring.datasource.username=root
-spring.datasource.password=nikhil14399
+spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
+spring.datasource.username=hrm
+spring.datasource.password=sqluser@hrm
 
 #
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
