--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -54,9 +54,9 @@
 #spring.mail.password=bqwrcollqqdecfow
 #
 #
-#spring.datasource.url=jdbc:mysql:///hrm_latest
-#spring.datasource.username=root
-#spring.datasource.password=3472
+spring.datasource.url=jdbc:mysql:///hrm_final
+spring.datasource.username=root
+spring.datasource.password=3472
 ##spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 ##spring.datasource.username=revanth 
 ##spring.datasource.password=Admin@123
