--- a/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/EmailSender/src/main/resources/application.properties
@@ -104,7 +104,9 @@ spring.mail.properties.mail.smtp.connectiontimeout=15000
 spring.mail.properties.mail.smtp.socketFactory.fallback = true
 spring.mail.properties.mail.debug=true
 
-
+spring.datasource.url=jdbc:mysql:///25-11-2022-final
+spring.datasource.username=root
+spring.datasource.password=root
 
 #spring.mail.from.email=<username@gmail.com>
 
