--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Resignation_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Resignation_Service/src/main/resources/application.properties
@@ -9,10 +9,12 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
-spring.datasource.username=hrm
-spring.datasource.password=sqluser@hrm
+spring.datasource.url=jdbc:mysql:///25-11-2022-final
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
+#spring.datasource.username=hrm
+#spring.datasource.password=sqluser@hrm
 server.port=8143
 spring.datasource.hikari.maxLifeTime:600000
 max_connections=1000
