--- a/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/departments/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
 
-spring.datasource.url=jdbc:mysql:///hrm_prod
+spring.datasource.url=jdbc:mysql:///25-11-2022-final
 spring.datasource.username=root
-spring.datasource.password=Chow$5090
+spring.datasource.password=root
 
 #spring.datasource.url=jdbc:mysql://10.10.10.167:3306/hrm_prod 
 #spring.datasource.username=revanth 
