--- a/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/employee-service/src/main/resources/application.properties
@@ -7,10 +7,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
-spring.datasource.username=hrm
-spring.datasource.password=sqluser@hrm
+spring.datasource.url=jdbc:mysql:///24-11-2022hrm_prod_final
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
+#spring.datasource.username=hrm
+#spring.datasource.password=sqluser@hrm
 
 #
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
