--- a/HRM_LOCAL/HRM_LOCAL_JAVA/Recruitment-Tracker/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/Recruitment-Tracker/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.hostname=localhost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
 
-spring.datasource.url=jdbc:mysql:///25-11-2022-final
+spring.datasource.url=jdbc:mysql:///hrm-21-11
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod
