--- a/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
+++ b/HRM_LOCAL/HRM_LOCAL_JAVA/documentUpload_Service/src/main/resources/application.properties
@@ -3,13 +3,13 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
-spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=1MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifeTime:600000
-spring.datasource.url=jdbc:mysql:///25-11-2022-final
+spring.datasource.url=jdbc:mysql:///hrm_final
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=3472
 #spring.datasource.url=jdbc:mysql://localhost:3306/hrm_prod 
 #spring.datasource.username=hrm 
 #spring.datasource.password=hrm@123 
@@ -27,8 +27,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 server.port=8070
 spring.jackson.serialization.fail-on-empty-beans=false
-#project.image=images/
+project.image=images/
 
 #QA environment file path .
 #Please dont change this path .
-project.image=/tmp/images
+#project.image=/tmp/images
